feat: input only updates when bellow limit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <script>
     $(document).ready(function(){
-      $("#input-tb").on("change", getDate)
+      $("#input-tb").on("change", testValue)
     })
   </script>
   
