feat: converts tb power to HH:MM:SS but ugly

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 </head>
 <body>
   <input type="number" placeholder="give me the trailblaze level bruh" id="input-tb">
-  <p>The datetime value is: <span id="datetime"></span></p>
+  <p>Recharge time:  <span id="recharge-time"></span></p>
 </body>
 </html>
