bad code is ugly, but it works

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   </script>
   
   <script src="index.js"></script>
-  <title>Traiblaze</title>
+  <title id="page-title">Traiblaze</title>
 </head>
 <body>
-  <input type="number" placeholder="give me the trailblaze level bruh" id="input-tb">
+  <input type="number" placeholder="Trailblaze power" id="input-tb" onclick="this.select()">
   <p>Recharge time:  <span id="recharge-time"></span></p>
+  <p>It will recharge at <span id="recharge-date"></span></p>
 </body>
 </html>
