fix: changed function name without changing the references to it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <script>
     $(document).ready(function(){
-      $("#input-tb").on("change", testValue)
+      $("#input-tb").on("change", rechargeCalculation)
     })
   </script>
   
