feat: second timer works correctly with ugly code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script>
     $(document).ready(function(){
       $("#input-tb").on("change", rechargeCalculation)
+      $("#input-full-recharge").on("change", fullRechargeCalculation)
     })
   </script>
   
