--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
   <script>
     $(document).ready(function(){
-      $("#input-tb").on("change", $(this), rechargeCalculation)
-      $("#input-full-recharge").on("change", $(this), rechargeCalculation)
+      $("#input-recharge").on("change", $(this), rechargeCalculation)
+      $("#input-refill").on("change", $(this), rechargeCalculation)
+      $(".toggle-container").on("click", toggleSwitch)
     })
   </script>
   
@@ -22,31 +23,37 @@
 </head>
 <body>
   <div class="title">
-    <h1>Honkai Star Rail Trailblaze Power Timer</h1>
+    <h1 id="title-text">Honkai Star Rail Trailblaze Power Timer</h1>
+    <p id="toggle-text">Toggle between refill calculator and basic recharge calculator</p>
+    <div class="toggle-container">
+      <div class="toggle-button">
+        <div class="inner-circle"></div>
+      </div>
+    </div>
   </div>
   
   <div id="recharge-calc" class="container">
-    <label for="input-tb" class="label-input">Amount to recharge</label>
+    <label for="input-recharge" class="label-input">Amount to recharge</label>
     <div class="input-container">
-      <input type="number" id="input-tb" onclick="this.select()" class="text-input">
+      <input type="number" id="input-recharge" onclick="this.select()" class="text-input">
       <input type="submit" value="Continue" class="submit-button">
     </div>
-    <p>Will recharge in: </p>
+    <p id="recharge-text">Will recharge in: </p>
     <p id="recharge-time"></p>
     <p>at:</p>
     <p id="recharge-date"></p>
   </div>
 
-  <div id="full-recharge-calc" class="container">
-    <label for="input-full-recharge" class="label-input">Current trailblaze power</label>
+  <div id="refill-calc" class="container">
+    <label for="input-refill" class="label-input">Current trailblaze power</label>
     <div class="input-container">
-      <input type="number" id="input-full-recharge" onclick="this.select()" class="text-input">
+      <input type="number" id="input-refill" onclick="this.select()" class="text-input">
       <input type="submit" value="Continue" class="submit-button">
     </div>
     <p>Full refill in: </p>
-    <p id="full-recharge-time"></p>
+    <p id="refill-time"></p>
     <p>at: </p>
-    <p id="full-recharge-date"></p>
+    <p id="refill-date"></p>
   </div>
 </body>
 </html>
