fix: some small tweaks

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
   
   <div id="recharge-calc" class="container">
-    <label for="input-recharge" class="label-input">Amount to recharge</label>
+    <label for="input-recharge" class="label-input">Tb amount to recharge</label>
     <div class="input-container">
       <input type="number" id="input-recharge" onclick="this.select()" class="text-input">
       <input type="submit" value="Continue" class="submit-button">
