fix: some small fixes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
   </div>
   
-  <div id="recharge-calc" class="container">
+  <div id="recharge-calc" class="calc-container">
     <label for="input-recharge" class="label-input">Tb amount to recharge</label>
     <div class="input-container">
       <input type="number" id="input-recharge" onclick="this.select()" class="text-input">
@@ -46,7 +46,7 @@
     <p id="recharge-date" class="toggle-recharge"></p>
   </div>
 
-  <div id="refill-calc" class="container">
+  <div id="refill-calc" class="calc-container">
     <label for="input-refill" class="label-input">Current trailblaze power</label>
     <div class="input-container">
       <input type="number" id="input-refill" onclick="this.select()" class="text-input">
